# amtab-elt

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
airflow/: .env.example  Dockerfile  docker-compose.yml  requirements.txt
airflow/dags/: create_external_tables_dag.py  ingest_and_convert_dag.py  load_gtfs_static_dag.py
dbt/: dbt_project.yml  profiles.yml
dbt/models/: sources.yml
dbt/models/marts/: mart_otp_summary.sql  schema.yml
dbt/models/staging/: schema.yml  stg_routes.sql  stg_stop_times.sql  stg_stops.sql  stg_trip_updates.sql  stg_vehicle_positions.sql
dbt/seeds/: route_id_mapping.csv
streamlit/: app.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
